# dotsales

./: .gitignore  Dockerfile  db.sqlite3  entrypoint.sh  hello.py  manage.py  pyproject.toml  requirements.txt
accounts/c_auth/: DefaultGroups.py  api.py  apps.py  auth_backends.py  mixins.py  models.py  schemas.py  urls.py
accounts/c_auth/migrations/: 0001_initial.py
accounts/c_auth/utils/: DefaultGroups.py  auth.py
accounts/companies/: admin.py  apps.py  forms.py  schemas.py  urls.py
accounts/companies/migrations/: 0001_initial.py  0002_branch_email_branch_phone_1_branch_phone_2.py
accounts/companies/models/: Branch.py  Company.py  __init__.py
accounts/users/: admin.py  api.py  app_permissions.py  apps.py  context_processors.py  forms.py  schemas.py  signals.py  urls.py  views.py
accounts/users/migrations/: 0001_initial.py  0002_remove_user_is_active_userprofile_gender_and_more.py  0003_remove_userprofile_accessible_branches_and_more.py  0004_user_is_active.py  0005_user_c_groups.py  0006_userprofile_admin_access.py
accounts/users/models/: User.py  UserProfile.py  __init__.py
api/: api.py
app/branches/: apps.py  urls.py  views.py
app/company/: apps.py  urls.py  views.py
app/company/templatetags/: mytags.py
dotsales/: .env  appsConfig.py  asgi.py  email_backends.py  settings.py  urls.py  wsgi.py
dotsales/templates/cotton/: base.html  layout.html  layout2.html  loader.html
finances/payments/: apps.py
inventory/products/: admin.py  apps.py
inventory/sales/: admin.py  apps.py
inventory/stock/: admin.py  apps.py  signals.py
(+47 files in other folders)
